--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@
 }
 
 .container {
-    width: 105%; 
+    width: 100%; 
     max-width: 1200px; 
     height: auto;
+    max-height:100px;
     position: absolute;
     top: 50%;
     left: 50%;
