--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
     width: 100%; 
     max-width: 1200px; 
     height: auto;
-    padding:10px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -60,6 +59,7 @@
     bottom: -20px;
     left: 50%;
     transform: translateX(-50%);
+    padding:10px
 }
 
 #hrs::after {
